$Id$

****************************** DRUPAL 5 BRANCH ********************************

March 31, 2009
--------------
#419782 by Michelle: Fixed wording on time ago/actual date option as it was backwards.

March 30, 2009
--------------
#412906 by Michelle: Fixed typo in the author pane template and cleaned up comments.

March 21, 2009
--------------
#402352 by Michelle: Removed logic to print user title image. Variable is still there.
#408006, #397860 by Michelle: Changed online/offline default to be small icon plus words.

March 4, 2009
-------------
#373371 by Michelle: Synched up Author Pane template and updated CSS for Author Pane.

February 26, 2009 -- RC 2
-----------------
NOISSUE by Michelle: Fleshed out the readme.txt file more.
#373371 by Michelle: Syncing up Author Pane.

February 20, 2009 
-----------------
#376540 by Michelle: Passed all image file names through t() to make them translatable as suggested by klavs.
#375806 by Michelle: Check to make sure it's imagecache 2 installed not imagecache 1 to avoid errors.

February 11, 2009 -- RC 1
-----------------
#303548 by Michelle: Added default avatar support to custom user picture function and also linked to profile.
#310547 by Michelle: Organized and cleaned up settings page.
NOISSUE by Michelle: Small coder cleanup fixes.

February 9, 2009
----------------
#371859 by lamigo: Fixed postgress error.

February 8, 2009
----------------
NOISSUE by Michelle: Check to make sure $links isn't empty before iterating thru it. Thanks to ghankstef for testing.

February 7, 2009 -- BETA 1
----------------
#315972 by Michelle: Finished the reply link theming started yesterday.
#369078 by lamigo: Fixed postgres errors.
#367496 by Michelle: Added check for link text when buttonifying.

February 6, 2009
----------------
#315972 by Michelle: Separated out topic header into its own theme file and made the reply link a themeable function.