@@ -17,4 +17,4 @@
     <dd><?php print t('Forum is Locked'); ?></dd>
   </dl>
 </div>
-<br style="clear: both;">
+<br style="clear: both;" />
